--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-    <iframe class="wrapped-iframe" src="https://z2-rpw.phreesia.net/embedded.selfscheduling.app/#/a18ace31-f300-40ac-923e-6a6843fc9580/select-type"></iframe>
+    <iframe title="Intentionally blank" class="wrapped-iframe" src="https://z2-rpw.phreesia.net/embedded.selfscheduling.app/?practiceId=a18ace31-f300-40ac-923e-6a6843fc9580&caller=https%3A%2F%2Fjohngorham.github.io#/a18ace31-f300-40ac-923e-6a6843fc9580?embedded=true"></iframe>
   </body>
 </html>
