--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html>
   <head>
     <title>This is the title of the webpage!</title>
+    <style type="text/css">
+            body, html
+            {
+                margin: 0; padding: 0; height: 100%; overflow: hidden;
+            }
+
+            #content
+            {
+                position:absolute; left: 0; right: 0; bottom: 0; top: 0px; 
+            }
+        </style>
   </head>
   <body>
-    <p>This is an example paragraph. Anything in the <strong>body</strong> tag will appear on the page, just like this <strong>p</strong> tag and its contents.</p>
-    <iframe title="Intentionally blank" class="wrapped-iframe" src="https://z2-rpw.phreesia.net/embedded.selfscheduling.app/?practiceId=a18ace31-f300-40ac-923e-6a6843fc9580&caller=https%3A%2F%2Fjohngorham.github.io#/a18ace31-f300-40ac-923e-6a6843fc9580?embedded=true"></iframe>
+    <div id="content">
+      <iframe width="100%" height="100%" frameborder="0" title="Intentionally blank" class="wrapped-iframe" src="https://z2-rpw.phreesia.net/embedded.selfscheduling.app/?practiceId=a18ace31-f300-40ac-923e-6a6843fc9580&caller=https%3A%2F%2Fjohngorham.github.io#/a18ace31-f300-40ac-923e-6a6843fc9580?embedded=true"></iframe>
+    </div>
   </body>
 </html>
