--- a/index.html
+++ b/index.html
@@ -19,4 +19,11 @@
       <iframe width="100%" height="100%" frameborder="0" title="Intentionally blank" class="wrapped-iframe" src="https://z2-rpw.phreesia.net/embedded.selfscheduling.app/?practiceId=a18ace31-f300-40ac-923e-6a6843fc9580&caller=https%3A%2F%2Fjohngorham.github.io#/a18ace31-f300-40ac-923e-6a6843fc9580?embedded=true"></iframe>
     </div>
   </body>
+  <script>
+    window.addEventListener("message", doSomethingWithTheMessage, false);
+
+function doSomethingWithTheMessage(event) {
+    alert("Do Something!");
+}
+  </script>
 </html>
