--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     window.addEventListener("message", doSomethingWithTheMessage, false);
 
 function doSomethingWithTheMessage(event) {
-    alert("Do Something!");
+    console.log(event);
 }
   </script>
 </html>
