--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     window.addEventListener("message", doSomethingWithTheMessage, false);
 
     function doSomethingWithTheMessage(event) {
-        var b=JSON.parse(event.data);
-        dataLayer.push(b)
-        console.log(event);
+              console.log(event);  
+      dataLayer.push(event.data)
+
     }
   </script>
 </html>
